# PhotoShare_Project

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  supervisord.conf
Project/: alembic.ini  main.py  pyproject.toml
Project/src/: main.py
Project/src/conf/: .env.example  config.py
Project/src/database/: db.py
Project/src/entity/: models.py
Project/src/repository/: comments.py  photos.py
Project/src/routes/: auth.py  comments.py  photos.py
Project/src/schemas/: comments.py  photos.py  roles.py  user.py
Project/src/services/: auth_service.py  dependencies.py  roles.py
Project/tests/: test_1.py  test_comments.py  test_db.py
alembic/: env.py
alembic/versions/: 232d9fbecb59_change_models_user.py  311e81ba0008_create_database.py  3b458e63e0b7_init.py  b60edd22cc1e_firs_mig.py  f6eef47f31f9_initial_migration.py
src/conf/: .env.example  config.py
src/database/: db.py
src/entity/: models.py
